질문등록 오류 수정