@@ -1,12 +1,12 @@
 package com.mysite.sbb.question;
 
 import java.security.Principal;
-import java.util.List;
 
 import com.mysite.sbb.answer.AnswerForm;
 import com.mysite.sbb.user.SiteUser;
 import com.mysite.sbb.user.UserService;
 import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -15,87 +15,109 @@ import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.web.server.ResponseStatusException;
 
+@Controller
 @RequestMapping("/question")
 @RequiredArgsConstructor
-@Controller
 public class QuestionController {
 
     private final QuestionService questionService;
-    private UserService userService;
+    private final UserService userService;
 
     @GetMapping("/list")
-    public String list(Model model, @RequestParam(value = "page", defaultValue = "0") int page) {
-        Page<Question> paging = this.questionService.getList(page);
+    public String list(Model model, @RequestParam(defaultValue = "0") int page, String kw) {
+        Page<Question> paging = questionService.getList(page);
+
         model.addAttribute("paging", paging);
+
         return "question_list";
     }
 
-    @GetMapping(value = "/detail/{id}")
+    @GetMapping("/detail/{id}")
     public String detail(Model model, @PathVariable("id") Integer id, AnswerForm answerForm) {
-        Question question = this.questionService.getQuestion(id);
+        Question question = questionService.getQuestion(id);
+
         model.addAttribute("question", question);
+
         return "question_detail";
     }
 
     @PreAuthorize("isAuthenticated()")
     @GetMapping("/create")
-    public String questionCreate(QuestionForm questionForm) {
+    // questionForm 변수는 model.addAttribute 없이 바로 뷰에서 접근할 수 있다.
+    // QuestionForm questionForm 써주는 이유, question_form.html 에서 questionForm 변수가 없으면 실행이 안되기 때문에
+    // 빈 객체라도 만든다.
+    public String questionCreate(Model model) {
+        model.addAttribute("questionForm", new QuestionForm());
         return "question_form";
     }
 
-    @PreAuthorize("isAuthenticated()") //로그인이 필요한곳에 붙힘
+    @PreAuthorize("isAuthenticated()")
     @PostMapping("/create")
+    // @Valid QuestionForm questionForm
+    // questionForm 값을 바인딩 할 때 유효성 체크를 해라!
+    // questionForm 변수와 bindingResult 변수는 model.addAttribute 없이 바로 뷰에서 접근할 수 있다.
     public String questionCreate(@Valid QuestionForm questionForm, BindingResult bindingResult, Principal principal) {
         if (bindingResult.hasErrors()) {
+            // question_form.html 실행
+            // 다시 작성하라는 의미로 응답에 폼을 실어서 보냄
             return "question_form";
         }
-        SiteUser siteUser = this.userService.getUser(principal.getName());
-        this.questionService.create(questionForm.getSubject(), questionForm.getContent(), siteUser);
-        return "redirect:/question/list";
+
+        SiteUser siteUser = userService.getUser(principal.getName());
+
+        questionService.create(questionForm.getSubject(), questionForm.getContent(), siteUser);
+
+        return "redirect:/question/list"; // 질문 저장후 질문목록으로 이동
     }
 
-    @PreAuthorize("isAuthenicated()")
-    @GetMapping("modufy/{id}")
+    @PreAuthorize("isAuthenticated()")
+    @GetMapping("/modify/{id}")
     public String questionModify(QuestionForm questionForm, @PathVariable("id") Integer id, Principal principal) {
         Question question = this.questionService.getQuestion(id);
+
         if (!question.getAuthor().getUsername().equals(principal.getName())) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "수정권한이 없습니다.");
         }
+
         questionForm.setSubject(question.getSubject());
         questionForm.setContent(question.getContent());
-        return "question_form";
 
+        return "question_form";
     }
 
     @PreAuthorize("isAuthenticated()")
     @PostMapping("/modify/{id}")
-    public String questionModify(@Valid QuestionForm questionForm, BindingResult bindingResult, Principal principal,
-                                 @PathVariable("id") Integer id) {
+    public String questionModify(@Valid QuestionForm questionForm, BindingResult bindingResult,
+                                 Principal principal, @PathVariable("id") Integer id) {
         if (bindingResult.hasErrors()) {
             return "question_form";
         }
-        Question question = this.questionService.getQuestion(id);
+
+        Question question = questionService.getQuestion(id);
+
         if (!question.getAuthor().getUsername().equals(principal.getName())) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "수정권한이 없습니다.");
         }
-        this.questionService.modify(question, questionForm.getSubject(), questionForm.getContent());
-        return String.format("redirect:/question/detail/%s", id);
+
+        questionService.modify(question, questionForm.getSubject(), questionForm.getContent());
+
+        return "redirect:/question/detail/%d".formatted(id);
     }
+
     @PreAuthorize("isAuthenticated()")
     @GetMapping("/delete/{id}")
     public String questionDelete(Principal principal, @PathVariable("id") Integer id) {
         Question question = this.questionService.getQuestion(id);
+
         if (!question.getAuthor().getUsername().equals(principal.getName())) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "삭제권한이 없습니다.");
         }
-        this.questionService.delete(question);
+
+        questionService.delete(question);
+
         return "redirect:/";
-                //사용자랑 질문작성자가 같아야 삭제 됨
+    }
 
-            }
-        }
-
-
+}
